refactor names & services to appropriate packages + fix beans lifecycle

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,3 +6,4 @@ quarkusPlatformArtifactId=quarkus-universe-bom
 quarkusPluginId=io.quarkus
 quarkusPlatformGroupId=io.quarkus
 quarkusPlatformVersion=1.11.1.Final
+quarkus.container-image.group=codelab
